add(notes): Morris and probability concepts

--- a/src/_preamble.tex
+++ b/src/_preamble.tex
@@ -1,5 +1,8 @@
 \documentclass{article}
 \usepackage{fontspec} %fonts
+\usepackage{hyperref}
+\usepackage{listings}
+\usepackage{amsmath}
 \newfontfamily{\emoji}{Noto Emoji}[Renderer=Harfbuzz]
 % The Noto Emoji font can be downloaded here: https://www.google.com/get/noto/#emoji-zsye
 \setmainfont{texgyrepagella}[
