update(probability notes): formal definition of eps-delta approximtion

--- a/src/_preamble.tex
+++ b/src/_preamble.tex
@@ -3,6 +3,7 @@
 \usepackage{hyperref}
 \usepackage{listings}
 \usepackage{amsmath}
+\usepackage{dsfont}
 \newfontfamily{\emoji}{Noto Emoji}[Renderer=Harfbuzz]
 % The Noto Emoji font can be downloaded here: https://www.google.com/get/noto/#emoji-zsye
 \setmainfont{texgyrepagella}[
