--- a/src/probability.tex
+++ b/src/probability.tex
@@ -76,3 +76,10 @@ Thus one could say with ϵ < 0.2 we guarantee with δ > 0.9 that such estimate i
 \textbf{map absolute value of error to ϵ}
 \\
 \textbf{map confidence interval to δ}
+
+\subsubsection{Formal definition}
+
+\begin{equation}
+	\mathds{P}[|\phi - t| > ϵt] \le \delta
+	\label{eq:eps-delta approximtion}
+\end{equation}
