--- a/src/morris.tex
+++ b/src/morris.tex
@@ -59,3 +59,7 @@ then we get to this final equation
 
 Saving space, the amount of bits required to be tracked is $log(n)$ and bits implies binary counting that is with n bits we can track $2^n$ states that eventually map
 to numbers, thus a binary morris counter actually is $O(log(log(n)))$ in spatial complexity, because is not dealing with integers, but bits.
+
+\subsection{Dealing with multiple counters}
+\def\first{https://youtu.be/XLNZafvSWNg}
+\ytref{link to video}{\first}[1][19][50]
