--- a/src/notes.bib
+++ b/src/notes.bib
@@ -42,3 +42,10 @@
   title = {EStimator: Simple Definitions and Examples},
   note = {\href{https://www.statisticshowto.com/estimator/} {BlogPost link } },
 }
+
+
+@misc{yt1,
+  author = {Rahul Patwari},
+  title = {Estimation and Confidence Intervals},
+  note = {\href{https://www.youtube.com/watch?v=_BiVb6neUP0} {YT link} },
+}
