update(src/probability.tex): better "informal definition" for Chebyshev and (ϵ,δ)-approximation

--- a/src/probability.tex
+++ b/src/probability.tex
@@ -85,4 +85,17 @@ Thus one could say with ϵ < 0.2 we guarantee with δ > 0.9 that such estimate i
 \end{equation}
 \textbf{Read this as:}
 \\
-The probability of ϕ being a wrong estimation for a percentage of t is at most δ
+it provides an upper bound for the estimated probability to deviate from expected error.
+
+\subsubsection{Russian inequalities}
+
+\subsubsection{Chebyshev}
+
+\begin{equation}
+	\mathds{P}[|X - \mathds{E}[X] | \ge \lambda] \le \frac{Var[X]}{\lambda^2}
+	\label{eq:Chebyshev inequality}
+\end{equation}
+\\
+\textbf{Read this as}
+\\
+it provides an upper bound on the probability that a random variable deviates from its mean by more than a certain multiple of the standard deviation.
